--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,16 +2,82 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  margin:0;
+  padding: 0;
+}
+
+h1, h2, h3, h4{
+  color: var(--black);
+  font-family: "Lato", System-ui, Helvetica, Arial, sans-serif;
+  font-weight: 700;
+}
+
+ul li, td, p, a, pre{
+  font-size: 16px;
+  font-family: "Inter", System-ui, Helvetica, Arial, sans-serif;
+}
+
+h1{
+  font-size: 3em;
+}
+
+
+ul, ol {
+  list-style-type: disc; 
+  margin: 0px; 
+  padding-left: 32px; 
+}
+
+:root {
+  --red: #cd372a;
+  --light-beige: #F2ECE4;
+  --beige: #E8DDCD;
+  --light-grey: #E5E7EB;
+  --black: #383435;
+  --white: #FEFEFE;
+  --box-shadow: 0px 0px 3px 0px  rgb(0, 0, 0, 0.1 );
+}
+
 @media (width <= 600px) {
 
-  .footer{
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-    
+  .wrapper, .page-margin{
+    margin: 12px;
   }
+
+  .service-container, .hero-container{
+    grid-template-columns: 1fr;
+  }
+
+  .contact-info{
+    margin-bottom: 1.5rem;
+  }
+
 
   #map{
     grid-column: span 2;
+    padding-bottom: 1.2em;
   }
 
 }
+
+
+/*screen size lower than 1200px desktop nav disappears*/
+@media screen and (max-width: 1100px) {
+  
+  #desktop-nav{
+    display: none;
+  }
+  #hamburger-nav{
+    display: flex;
+  }
+  
+  .header_contact{
+    display:none;
+  }
+
+}
+
+
